--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=DB60B27C4A71D10D079816B316C458A2
-ProjectName=Third Person BP Game Template
+ProjectID=903BCC09474A23804F517F894C20C757
+ProjectName=unnamed RPG
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+
